# VulnApp-Software-Explotation

./: .gitignore  Dockerfile  README.md  docker-compose.yml  examples.py  pyproject.toml  requirements.txt  schema.sql  simple_insert_example.py
src/backend/: main.py
src/backend/lib/: auth.py  database.py
src/backend/views/: auth.py  recipes.py  users.py
src/frontend/: index.html
src/frontend/css/: style.css
src/frontend/js/: app.js  auth.js  profile.js  recipes.js  static_recipes.js  users.js
