[project]
name = "bakeapp"
version = "0.1.0"
description = "Baking Recipe Sharing Platform for Security Testing"
authors = [
    {name = "Juan",email = "je.canizarez@uniandes.edu.co"}
]
readme = "README.md"
requires-python = "3.10.*"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "python-multipart (>=0.0.6,<0.1.0)",
    "jwt (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
